<resources>
    <string name="app_name">Delivery Texnomart</string>

    <string name="empty_title" />
    <string name="title_dialog_error">Error</string>
    <string name="title_orders">Orders</string>
    <string name="title_order">Order: %s </string>
    <string name="title_refuse">Order refuse</string>

    <string name="text_login">Login</string>
    <string name="text_pwd">Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_number">№: %s</string>
    <string name="text_date">: %s</string>
    <string name="text_address">Address</string>
    <string name="text_good">Product</string>
    <string name="text_amount">Amount</string>
    <string name="text_refuse_order">Refuse</string>
    <string name="text_price">Price</string>
    <string name="text_sum">Sum</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_open_order">Open order</string>
    <string name="text_contact_person">Contact person</string>
    <string name="text_phone">Phone</string>
    <string name="text_open_shift">Open shift</string>
    <string name="text_orders_size">Orders: %s</string>
    <string name="text_transfer_order">Transfer order</string>
    <string name="text_close_shift">Close shift</string>
    <string name="text_total_title">Total:</string>
    <string name="text_verification_code">····</string>
    <string name="text_total_sum_order">Total sum:</string>
    <string name="text_car">Car number</string>
    <string name="text_login_as_admin">Log in as admin</string>
    <string name="txt_continue">Continue</string>
    <string name="text_clock">Clock</string>
    <string name="text_example_clock">2:45</string>
    <string name="text_send_againg"><u>Send againg</u></string>
    <string name="text_all">ALL</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_are_you_sure_you_want_to_cancel_your_order">Are you sure you want to cancel your order?</string>
    <string name="text_filter_orders">Filter</string>
    <string name="text_filter_descending">Descending</string>
    <string name="text_filter_ascending">Ascending</string>
    <string name="text_goods_received">Goods received</string>
    <string name="text_floor">Floor</string>
    <string name="text_response">Response text</string>
    <string name="text_close">Close</string>
    <string name="text_confirm_order_response">Letter message confirmed</string>
    <string name="text_transfer_order_response">Order transferred</string>
    <string name="text_refuse_order_response">Order refused</string>


    <string name="error_field_empty">Field empty</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_field_incorrect">Field is incorrect</string>
    <string name="error_client_not_found">Client not found</string>
    <string name="error_date_number_of_order_not_fill">Date or number not filled</string>
    <string name="error_date_format_invalid">Date format invalid</string>
    <string name="error_order_not_found">Order not found</string>
    <string name="error_message_incorrect">Message incorrect</string>
    <string name="error_route_sheet_not_found">Route sheet not found</string>
    <string name="error_can_not_close_route_sheet">Can not close rout sheet</string>
    <string name="error_can_not_found_realization">Can not found realization document</string>
    <string name="error_can_not_create_route_sheet">Can not create route sheet</string>
    <string name="error_can_not_connect">Can not connect server</string>

    <array name="order_status">
        <item>All</item>
        <item>In transit</item>
        <item>Delivered</item>
    </array>
    <string name="text_transfer_order_question">Do you want to transfer order?</string>

</resources>