<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_start"
    android:background="@drawable/shape_constraint">

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_number"
        android:textSize="@dimen/default_text_size_h3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gline_for_elements"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_date"
        android:textSize="@dimen/default_text_size_h2"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_number"
        app:layout_constraintEnd_toStartOf="@+id/img_open_order"
        app:layout_constraintStart_toEndOf="@+id/txt_number" />

    <ImageView
        android:id="@+id/img_open_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:contentDescription="@string/text_open_order"
        android:paddingStart="@dimen/margin_top_start"
        android:paddingEnd="@dimen/margin_top_start"
        android:src="@drawable/open_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/delimiter"
        style="@style/Delimiter"
        android:layout_marginTop="@dimen/margin_top_start"
        app:layout_constraintStart_toStartOf="@id/txt_number"
        app:layout_constraintTop_toBottomOf="@+id/chb_goods_received" />

    <TextView
        android:id="@+id/txtTextContactPerson"
        style="@style/mindarktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_contact_person"
        app:layout_constraintStart_toStartOf="@id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/delimiter" />

    <TextView
        android:id="@+id/txtContactPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/text_contact_person"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/iv_person"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtTextAddress"
        style="@style/mindarktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_address"
        app:layout_constraintStart_toStartOf="@id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/txtContactPerson" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="16dp"
        android:text="@string/text_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/txtTextAddress" />

    <TextView
        android:id="@+id/txtTextPhone"
        style="@style/mindarktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_phone"
        app:layout_constraintStart_toStartOf="@id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/etxt_floor" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="16dp"
        android:text="@string/text_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/txtTextPhone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline_for_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/img_call_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_phone"
        android:contentDescription="@string/text_phone"
        android:padding="@dimen/padding_default"
        android:src="@drawable/ic_phone_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_person"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/text_example_clock"
        android:src="@drawable/example_person"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/txtTextContactPerson"
        tools:srcCompat="@drawable/example_person" />

    <CheckBox
        android:id="@+id/chb_goods_received"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/text_goods_received"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements"
        app:layout_constraintTop_toBottomOf="@+id/txt_number" />

    <TextView
        android:id="@+id/txtFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_floor"
        app:layout_constraintBaseline_toBaselineOf="@+id/etxt_floor"
        app:layout_constraintStart_toStartOf="@+id/gline_for_elements" />

    <EditText
        android:id="@+id/etxt_floor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:autofillHints="@string/text_floor"
        android:ems="10"
        android:hint="@string/text_floor"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtFloor"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>