<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_good_item">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/text_good"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintBottom_toBottomOf="@id/gline_img_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_main"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_main"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline_img_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="208dp" />

    <TextView
        android:id="@+id/txt_text_price"
        style="@style/mindarktext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_price"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintStart_toStartOf="@id/gline_price_sum"
        app:layout_constraintTop_toBottomOf="@id/gline_img_name" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/text_price"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintStart_toStartOf="@id/gline_price_sum"
        app:layout_constraintTop_toBottomOf="@id/txt_text_price" />

    <TextView
        android:id="@+id/txt_text_sum"
        style="@style/mindarktext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_start"
        android:text="@string/text_sum"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintStart_toStartOf="@id/gline_price_sum"
        app:layout_constraintTop_toBottomOf="@id/txt_price" />

    <TextView
        android:id="@+id/txt_sum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/text_sum"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintStart_toStartOf="@id/gline_price_sum"
        app:layout_constraintTop_toBottomOf="@id/txt_text_sum" />

    <TextView
        android:id="@+id/txt_text_amount"
        style="@style/mindarktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sum"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_text_price"
        app:layout_constraintTop_toTopOf="@+id/txt_text_price" />

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/text_sum"
        android:textSize="@dimen/default_text_size_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_price"
        app:layout_constraintTop_toBottomOf="@+id/txt_text_amount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline_price_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>